<resources>
    <string name="app_name">UrbanHotel</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="sign_in">Already have an account? Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>